--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,6 +7,15 @@
   min-height: 100vh;
 }
 
+.transfer {
+  padding: 10px;
+  margin: 10px;
+}
+
+.fieldset {
+  padding: 10px;
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
@@ -97,7 +106,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
@@ -125,7 +134,7 @@
 
 .thirteen::before,
 .thirteen::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: -1;
 }
