--- a/src/components/action-button/ActionButton.module.scss
+++ b/src/components/action-button/ActionButton.module.scss
@@ -1,40 +1,81 @@
-@import 'styles/common';
+@import "styles/common";
 
-.buttonPrimary, .buttonSecondary {
+.buttonPrimary,
+.buttonSecondary {
+  font-family: inherit;
   padding: 12px 24px;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 4px;
-  border: 2px solid $white;
+  border-radius: 6px;
+  border: 1px solid var(--container-border-color);
   background-color: transparent;
   outline: none;
-  transition: 0.5s ease-in-out;
+  transition: 0.3s ease-in-out;
   cursor: pointer;
-}
 
-.textStyle{
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 16px;
-}
-
-.buttonPrimary{
-  background-color: $white;
-  color: $black;
   &:hover {
-    background: $transparentShadedBlack;
-    color:$white;
-    transition: 0.5s ease-in-out;
+    transform: scale(1.1);
   }
 }
 
-.buttonSecondary{
+.textStyle {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1;
+}
+
+.buttonPrimary {
+  border-color: transparent;
+  background: linear-gradient(121.99deg, #00d3ff -26.48%, #1a49ff 64.48%);
   color: $white;
-  &:hover {
+}
+
+.buttonSecondary {
+  background: $white;
+  color: inherit;
+}
+
+@include desktops-laptops {
+  .buttonPrimary,
+  .buttonSecondary {
+    padding: 16px 30px;
+
+    .textStyle {
+      font-size: 15px;
+    }
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .buttonPrimary {
     background: $white;
-    color: $black;
-    transition: 0.5s ease-in-out;
+
+    .textStyle {
+      background: linear-gradient(121.99deg, #00d3ff -26.48%, #1a49ff 64.48%);
+      background-clip: border-box;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+    }
+  }
+
+  .buttonSecondary {
+    background: transparent;
+    border-color: $white;
+
+    &:hover {
+      box-shadow: 0 0 20px 1px hsla(0, 0%, 100%, 0.5);
+      background: $white;
+
+      .textStyle {
+        background: linear-gradient(121.99deg, #00d3ff -26.48%, #1a49ff 64.48%);
+        background-clip: border-box;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+      }
+    }
   }
 }
