Added ZusSDK Functions

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -12,7 +12,8 @@
   align-items: center;
   column-gap: 0.8rem;
   background: var(--gradient-zus);
-  min-width: 25rem;
+  cursor: pointer;
+  border: 0;
 
   &.vult {
     background: var(--gradient-vult);
@@ -30,5 +31,12 @@
   &.large {
     padding-top: 1.7rem;
     padding-bottom: 1.7rem;
+    font-size: 1.6rem;
   }
+}
+
+
+.fullWidth {
+  display: block;
+  width: 100%;
 }
