--- a/src/screens/welcome/Welcome.module.scss
+++ b/src/screens/welcome/Welcome.module.scss
@@ -4,9 +4,6 @@
 
   .logo {
     transition: box-shadow 100ms ease-in;
-    border: 1px solid rgb(var(--color-border));
-    border-radius: 10px;
-    background-color: #fff;
     width: 50%;
     padding-top: 40%;
     position: relative;
@@ -25,10 +22,6 @@
 
     img {
       height: auto;
-    }
-
-    &:hover {
-      box-shadow: 2px 4px 10px rgba(117,117,117,.12);
     }
   }
 
@@ -69,6 +62,16 @@
   .welcomeWrapper {
     .flex {
       column-gap: 4rem;
+    }
+
+    .logo {
+      border: 1px solid rgb(var(--color-border));
+      border-radius: 10px;
+      background-color: #fff;
+  
+      &:hover {
+        box-shadow: 2px 4px 10px rgba(117,117,117,.12);
+      }
     }
   }
 }
