--- a/src/components/Dialog/SendToken/EnterAmountDialog.module.scss
+++ b/src/components/Dialog/SendToken/EnterAmountDialog.module.scss
@@ -1,4 +1,21 @@
 
+.flexCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flexCenterBaseline {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
+
+.flexCenterCol {
+  @extend .flexCenter;
+  flex-direction: column;
+}
+
 .enterAmountDialog {
   width: 468px;
   border-radius: 12px;
@@ -10,7 +27,7 @@
   font-size: 15px;
   line-height: 19px;
   text-align: center;
-  color: $primaryText;
+  color: #000;
   margin-top: 62px;
   margin-bottom: 16px;
 }
@@ -21,13 +38,13 @@
   font-size: 36px;
   line-height: 44px;
   text-align: center;
-  color: $semiBlack;
+  color: rgb(30, 30, 30);
 }
 
 .coinSymbol {
   font-weight: 400;
   font-size: 14px;
-  color: $semiBlack;
+  color: rgb(30, 30, 30);
   margin-left: 5px;
 }
 
@@ -36,14 +53,18 @@
   font-size: 14px;
   line-height: 20px;
   text-align: center;
-  color: $semiBlack;
+  color: rgb(30, 30, 30);
   margin-top: 21px;
 }
 
 .divider {
   width: 280px;
   height: 2px;
-  background: $boltPrimaryGradient;
+  background: linear-gradient(
+  39.18deg,
+  #03c17d 21.01%,
+  #97e81c 139.72%
+);;
   border-bottom: 0;
 }
 
@@ -51,7 +72,11 @@
   width: 2px;
   height: 30px;
   margin: 0 5px;
-  background: $boltPrimaryGradient;
+  background: linear-gradient(
+  39.18deg,
+  #03c17d 21.01%,
+  #97e81c 139.72%
+);;
 }
 
 .availableBalanceContainer {
@@ -59,7 +84,7 @@
   margin: 20px 0;
   padding: 16px 0;
   width: 200px;
-  background-color: $semiGray;
+  background-color: #f1f0f6;
 }
 
 .balanceTitle {
@@ -67,7 +92,7 @@
   font-size: 14px;
   line-height: 24px;
   text-align: center;
-  color: $semiBlack;
+  color: rgb(30, 30, 30);
 }
 
 .balanceValue {
@@ -77,7 +102,7 @@
   font-size: 24px;
   line-height: 32px;
   text-align: center;
-  color: $semiBlack;
+  color: rgb(30, 30, 30);
 }
 
 .secondaryButton {
