--- a/src/components/Dialog/SendToken/EnterAmountDialog.module.scss
+++ b/src/components/Dialog/SendToken/EnterAmountDialog.module.scss
@@ -1,21 +1,4 @@
 
-.flexCenter {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.flexCenterBaseline {
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-}
-
-.flexCenterCol {
-  @extend .flexCenter;
-  flex-direction: column;
-}
-
 .enterAmountDialog {
   width: 468px;
   border-radius: 12px;
@@ -27,7 +10,7 @@
   font-size: 15px;
   line-height: 19px;
   text-align: center;
-  color: #000;
+  color: $primaryText;
   margin-top: 62px;
   margin-bottom: 16px;
 }
@@ -38,13 +21,13 @@
   font-size: 36px;
   line-height: 44px;
   text-align: center;
-  color: rgb(30, 30, 30);
+  color: $semiBlack;
 }
 
 .coinSymbol {
   font-weight: 400;
   font-size: 14px;
-  color: rgb(30, 30, 30);
+  color: $semiBlack;
   margin-left: 5px;
 }
 
@@ -53,18 +36,14 @@
   font-size: 14px;
   line-height: 20px;
   text-align: center;
-  color: rgb(30, 30, 30);
+  color: $semiBlack;
   margin-top: 21px;
 }
 
 .divider {
   width: 280px;
   height: 2px;
-  background: linear-gradient(
-  39.18deg,
-  #03c17d 21.01%,
-  #97e81c 139.72%
-);;
+  background: $boltPrimaryGradient;
   border-bottom: 0;
 }
 
@@ -72,11 +51,7 @@
   width: 2px;
   height: 30px;
   margin: 0 5px;
-  background: linear-gradient(
-  39.18deg,
-  #03c17d 21.01%,
-  #97e81c 139.72%
-);;
+  background: $boltPrimaryGradient;
 }
 
 .availableBalanceContainer {
@@ -84,7 +59,7 @@
   margin: 20px 0;
   padding: 16px 0;
   width: 200px;
-  background-color: #f1f0f6;
+  background-color: $semiGray;
 }
 
 .balanceTitle {
@@ -92,7 +67,7 @@
   font-size: 14px;
   line-height: 24px;
   text-align: center;
-  color: rgb(30, 30, 30);
+  color: $semiBlack;
 }
 
 .balanceValue {
@@ -102,7 +77,7 @@
   font-size: 24px;
   line-height: 32px;
   text-align: center;
-  color: rgb(30, 30, 30);
+  color: $semiBlack;
 }
 
 .secondaryButton {
