--- a/src/components/Dialog/SendToken/SendTokenDialog.module.scss
+++ b/src/components/Dialog/SendToken/SendTokenDialog.module.scss
@@ -1,19 +1,3 @@
-.flexCenter {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.flexCenterBaseline {
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-}
-
-.flexCenterCol {
-  @extend .flexCenter;
-  flex-direction: column;
-}
 
 .sendTokenDialog {
   width: 468px;
@@ -66,7 +50,7 @@
 
   .selectedListItem {
     @extend .listItem;
-    border: 1px solid rgb(30, 30, 30);
+    border: 1px solid $semiBlack;
     border-radius: 10px;
   }
 }
@@ -74,13 +58,13 @@
 .confirmationToast {
   width: 460px;
   height: 80px;
-  background: linear-gradient(39.18deg, #004f16 21.01%, #0d005a 139.72%);;
+  background: $boltToastGradient;
   border-radius: 20px;
   display: flex;
   align-items: center;
 
   p {
-    color: #fff;
+    color: $white;
     font-weight: 400;
     font-size: 15px;
     line-height: 22.5px;
