--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,3 +2,13 @@ $black: #000000;
 $white: #ffffff;
 
 $primaryBlue: #175bff;
+$veryPaleBlue: #e8eeff;
+
+$gray0: #202127;
+$gray1: #333333;
+$gray2: #4f4f4f;
+$gray3: #828282;
+$gray4: #bdbdbd;
+$gray5: #dcdee7;
+
+$darkGray: rgba(155, 155, 155, 0.15);
