--- a/src/screens/details/Details.module.scss
+++ b/src/screens/details/Details.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/common';
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -18,14 +20,14 @@
 }
 
 .label {
-  
+  font-weight: 600;
 }
 
-.list {
-  
+.value {
+  font-weight: 400;
+  color: $gray3;
 }
 
 .listJSON {
   overflow-x: scroll;
 }
-
