--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/common';
+
 .btn {
   margin: 0;
   display: flex;
@@ -23,6 +25,18 @@
     background: var(--gradient-bolt);
   }
 
+  &.white {
+    background: white;
+    color: var(--color-zus);
+    border: 1px solid var(--color-zus);
+  }
+
+  &.outline {
+    background: transparent;
+    color: $primaryBlue;
+    border: 1px solid $primaryBlue;
+  }
+
   figure {
     display: flex;
     align-items: center;
@@ -34,7 +48,6 @@
     font-size: 1.6rem;
   }
 }
-
 
 .fullWidth {
   display: block;
