Add View and Download button for files (#71)

--- a/src/components/files/Files.module.scss
+++ b/src/components/files/Files.module.scss
@@ -19,6 +19,8 @@
     gap: 1.6rem;
 
     button {
+      padding: 1rem 1.5rem;
+
       &:hover {
         color: $white;
         background-color: $primaryBlue;
