--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -27,6 +27,7 @@ $darkwhite: #e1e1e1;
 $pinkColor: #ff92e2;
 $darkBlack: #40444e;
 $greyDescriptionText: #90939e;
+$lightGrayishBlue: #cfcfe1;
 
 $darkGray: rgba(155, 155, 155, 0.15);
 $subTitleGray: rgba(0, 0, 0, 0.6);
