--- a/src/components/dialog/faucet-token/FaucetTokenDialog.module.scss
+++ b/src/components/dialog/faucet-token/FaucetTokenDialog.module.scss
@@ -5,11 +5,12 @@
     align-items: center;
     padding: 16px 20px;
     border: 1px solid grey;
-    color: white;
+    color: black;
     border-radius: 8px;
     margin: 4px 0px;
     font-weight: 600;
     font-size: 16px;
     line-height: 24px;
     width: 100%;
+    background-color: white;
   }
