Add Document Viewer (#37)

--- a/src/components/files-viewer/FilesViewer.module.scss
+++ b/src/components/files-viewer/FilesViewer.module.scss
@@ -1,5 +1,6 @@
 @import './CommonStyles.scss';
 @import './ImageViewer.module.scss';
+@import './DocViewer.module.scss';
 
 .wrapper {
   &::-webkit-scrollbar {
