--- a/src/components/files-viewer/DocViewer.module.scss
+++ b/src/components/files-viewer/DocViewer.module.scss
@@ -1,7 +1,14 @@
 @import './CommonStyles.scss';
 
 .docViewer {
+  @extend .clearStdStyles;
   width: 100%;
   height: 100%;
-  background-color: $black;
+  padding: 1rem;
+  background-color: $white;
+  border-radius: 12px;
+
+  @media (prefers-color-scheme: dark) {
+    background-color: $black;
+  }
 }
