--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -101,6 +101,30 @@
   white-space: nowrap;
 }
 
+.miniSpinner {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  border: 3px solid $white;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: -3px;
+    left: -3px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: $secondaryGray;
+    animation: rotate 1.25s ease-in-out infinite;
+  }
+}
+
 @keyframes bounceUp {
   0% {
     transform: translateY(100vh);
@@ -128,5 +152,11 @@
   }
   100% {
     transform: scale(1);
+  }
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(1turn);
   }
 }
