--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@import "styles/common";
+@import 'styles/common';
 
 .siteHeader {
   position: fixed;
@@ -12,6 +12,7 @@
   height: 6.5rem;
   background: #fff;
   box-shadow: 0px 0px 52px rgb(0 0 0 / 8%);
+  z-index: 1;
 }
 
 .logo {
