--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/common';
 
 .btn {
-  margin: 0;
+  margin: 1rem 0;
   display: flex;
   position: relative;
   color: white;
@@ -40,6 +40,12 @@
     background: transparent;
     color: $primaryBlue;
     border: 1px solid $primaryBlue;
+  }
+
+  &.boltOutline {
+    background: transparent;
+    color: $primaryGreen;
+    border: 1px solid $primaryGreen;
   }
 
   figure {
