--- a/src/screens/bolt/Bolt.module.scss
+++ b/src/screens/bolt/Bolt.module.scss
@@ -108,3 +108,12 @@
     img { margin-left: 1rem; }
   }
 }
+
+.refreshIcon {
+  margin-left: 1rem;
+  cursor: pointer;
+}
+
+.refreshing {
+  animation: rotate 1s linear infinite;
+}
