File Selection UI (#146)

--- a/src/components/files/Files.module.scss
+++ b/src/components/files/Files.module.scss
@@ -32,3 +32,14 @@
     }
   }
 }
+
+.heading {
+  @extend .flexStart;
+  align-items: center;
+  gap: 1rem;
+}
+
+.filesContainer {
+  @extend .flexCol;
+  gap: 1.6rem;
+}
