--- a/src/components/tile/Tile.module.scss
+++ b/src/components/tile/Tile.module.scss
@@ -7,6 +7,10 @@
   border-radius: 12px;
   background-color: $white;
   box-shadow: 0 0 75px $darkGray;
+
+  &.selectable {
+    cursor: pointer;
+  }
 }
 
 .left,
@@ -14,6 +18,14 @@
   display: flex;
   align-items: center;
   gap: 2rem;
+}
+
+.checkBox {
+  &,
+  label {
+    @extend .flexCenter;
+    pointer-events: none;
+  }
 }
 
 .icon {
