--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -28,6 +28,7 @@ $pinkColor: #ff92e2;
 $darkBlack: #40444e;
 $greyDescriptionText: #90939e;
 $lightGrayishBlue: #cfcfe1;
+$lightGray: #d0d0d0;
 
 $darkGray: rgba(155, 155, 155, 0.15);
 $subTitleGray: rgba(0, 0, 0, 0.6);
