--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -160,3 +160,18 @@
     transform: rotate(1turn);
   }
 }
+
+@keyframes popUp {
+  0% {
+    transform: translate(-50%, 130%) scale(0);
+    opacity: 0;
+  }
+  75% {
+    transform: translate(-50%, -5%) scale(1.05);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, 0) scale(1);
+    opacity: 1;
+  }
+}
