--- a/src/components/tile/Tile.module.scss
+++ b/src/components/tile/Tile.module.scss
@@ -6,7 +6,12 @@
   padding: 1.6rem;
   border-radius: 12px;
   background-color: $white;
+  border: 2px solid transparent;
   box-shadow: 0 0 75px $darkGray;
+
+  &:hover {
+    border-color: $primaryBlue;
+  }
 
   &.selectable {
     cursor: pointer;
