--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -125,6 +125,22 @@
   }
 }
 
+.divider {
+  border-bottom: 1px solid lighten($secondaryGray, 40%);
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 @keyframes bounceUp {
   0% {
     transform: translateY(100vh);
