--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -43,6 +43,7 @@ $overlayBackground: rgba(0, 0, 0, 0.5);
 $selectedMnemonicBackground: rgba(23, 91, 255, 0.1);
 $modalBoxShadow: rgba(0, 0, 0, 0.2);
 $lineShadeDark: rgba(139, 139, 139, 0.3);
+$zusWhitelight: rgba(250, 251, 255, 0.75);
 
 $primaryGradient: linear-gradient(121.99deg, #00d3ff -26.48%, #1a49ff 64.48%);
 $blimpGradiant: linear-gradient(135deg, #ffb156 0%, #ff4d00 55.52%);
